Change the index to test css
Signed-off-by: Luã Santilli <luasantilli@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<p>THIS IS THE BODY</p>
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Better Motherfucking Website</title><style type="text/css">body{margin:40px auto;max-width:650px;line-height:1.6;font-size:18px;color:#444;padding:0 10px}h1,h2,h3{line-height:1.2}</style></head>
+<body>
+<h1>
+This is <em> still </em> a motherfucking website. <br>
+</h1>
+<p>
+And it's more fucking perfect than the last guy's. <br>
+</p>
+<h2>
+Seriously, it takes minimal fucking effort to improve this shit. <br>
+</h2>
+<p>
+<strong> 7 fucking declarations. </strong> <br>
+</p>
+<p>
+That's how much CSS it took to turn that grotesque pile of shit nto this easy-to-read <br>
+masterpiece. It's so fucking simple and it still has all the glory of the original perfect-ass <br>
+website: <br>
+</p>
+<p>
+<strong> And guess what, motherfucker: </strong> <br>
+</p>
+<p>
+You never knew it, but it's easy to improve readability on your site. Here's how. <br>
+</p>
+<h2>
+Let it breathe <br>
+</h2>
+<p>
+Look at lines 1 and 2 of some shitty website you're building. Assuming they're not married they probably shouldn't be humping. The defaults are trash -- pick a minimum <code>
+line-height: 1.4 </code>
+for body copy. Headings should be tighter. If you can't see that...piss off. <br>
+</p>
+</body>
