Added new files
Signed-off-by: Luã Santilli <luasantilli@gmail.com>

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <h1>Aggregates</h1>
 <ul>
 <li><a href="cache.html">Caches</a></li>
+<li><a href="redes_ep2.html">Redes EP2</a></li>
 </ul>
 </body>
 </html>
